# icebreaker-litex-examples

./: .gitignore  .gitmodules  README.md  icebreaker.py
.github/workflows/: build.yml
c-riscv-blink/: .gitignore  Makefile  README.md
c-riscv-blink/include/hw/: common.h
c-riscv-blink/ld/: regions.ld
c-riscv-blink/src/: main.c  time.c
docs/: ctrl.html  genindex.html  index.html  interrupts.html  leds.html  lxspi.html  objects.inv  search.html  searchindex.js  spiflash.html  timer0.html  uart.html  uart_phy.html
docs/_sources/: ctrl.rst.txt  index.rst.txt  interrupts.rst.txt  leds.rst.txt  lxspi.rst.txt  spiflash.rst.txt  timer0.rst.txt  uart.rst.txt  uart_phy.rst.txt
docs/doctrees/: ctrl.doctree  environment.pickle  index.doctree  interrupts.doctree  leds.doctree  lxspi.doctree  timer0.doctree  uart.doctree  uart_phy.doctree
r-riscv-blink/: .gitignore  Cargo.toml  README.md  flash.sh
r-riscv-blink/.cargo/: config  flash.sh
r-riscv-blink/src/: debug.rs  leds.rs  main.rs  print.rs  timer.rs
rust/icebesoc-pac/: .gitignore  Cargo.toml  README.md  build.rs  generate.sh  iCEBESOC.svd  memory.x
rust/icebesoc-pac/src/: ctrl.rs  interrupt.rs  leds.rs  lib.rs  lxspi.rs  timer0.rs  uart.rs  uart_phy.rs
rust/icebesoc-pac/src/ctrl/: bus_errors0.rs  bus_errors1.rs  bus_errors2.rs  bus_errors3.rs  reset.rs  scratch0.rs  scratch1.rs  scratch2.rs  scratch3.rs
rust/icebesoc-pac/src/leds/: out.rs
rust/icebesoc-pac/src/lxspi/: bitbang.rs  bitbang_en.rs  miso.rs
rust/icebesoc-pac/src/timer0/: en.rs  ev_enable.rs  ev_pending.rs  ev_status.rs  load0.rs  load1.rs  load2.rs  load3.rs  reload0.rs  reload1.rs  reload2.rs  reload3.rs  update_value.rs  value0.rs  value1.rs  value2.rs  value3.rs
rust/icebesoc-pac/src/uart/: ev_enable.rs  ev_pending.rs  ev_status.rs  rxempty.rs  rxtx.rs  txfull.rs
rust/icebesoc-pac/src/uart_phy/: tuning_word0.rs  tuning_word1.rs  tuning_word2.rs  tuning_word3.rs
soc/: .gitignore  README.md  iCEBESOC.svd  icebreaker.py  lxbuildenv.py
soc/rtl/: leds.py
